--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <link rel="stylesheet" href="assets/style/main.css">
     <link rel="stylesheet" href="assets/style/style.css">
-    <title>TaskTracker</title>
+    <title>Task Tracker</title>
 </head>
 
 <body class="bg-dark">
@@ -32,7 +32,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="ml-5">
-                        <form>
+                        <form onsubmit="app.listsController.newList(event)">
                             <div class="mb-3 d-inline">
                                 <label for="" class="form-label sr-only">New List</label>
                                 <input type="text" class="" placeholder="New List" min="3" max="15">
@@ -44,8 +44,8 @@
                     </div>
                 </div>
             </div>
-            <div class="row  task-container m-auto py-lg-5">
-                <div class="col-lg-4">
+            <div id="list-container" class="row  task-container m-auto py-lg-5">
+                <!-- <div class="col-lg-4">
                     <div class="bg-primary p-0 my-3 task-card">
                         <h2 class="text-center mb-lg-4 task-header"><b>Task 1</b></h2>
                         <ul class="task-list m-3">
@@ -81,7 +81,7 @@
                             </form>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </main>
