--- a/index.html
+++ b/index.html
@@ -50,9 +50,15 @@
                         <h2 class="text-center mb-lg-4 task-header"><b>Task 1</b></h2>
                         <ul class="task-list m-3">
                             <li>
-                                <input onclick="swal('You completed a task!', 'Good Job!', 'success');" class="form-check-input" type="checkbox" value="" >
-                                <label class="form-check-label ml-3" for="flexCheckDefault"><p>Task to Complete</p></label>
-                                <i onclick="swal('Would you like to delete task?', {buttons: ['Cancel', true],});" class="fas fa-minus-circle"></i>
+                                <div class="row">
+                                    <div class="col-10">
+                                        <input onclick="swal('You completed a task!', 'Good Job!', 'success');" class="form-check-input" type="checkbox" value="" >
+                                        <label class="form-check-label ml-3" for="flexCheckDefault"><p>Task</p></label>
+                                    </div>
+                                    <div class="col-2">
+                                        <i onclick="swal('Would you like to delete task?', {buttons: ['Cancel', true],});" class="fas fa-minus-circle"></i>
+                                    </div>
+                                </div>
                             </li>
                             <li>
                                 <input class="form-check-input" type="checkbox" value="" >
@@ -61,12 +67,12 @@
                             </li>
                             <li>
                                 <input class="form-check-input" type="checkbox" value="" >
-                                <label class="form-check-label ml-3" for="flexCheckDefault"><p>Task to Complete</p></label>
+                                <label class="form-check-label ml-3" for="flexCheckDefault"><p>Complete</p></label>
                                 <i onclick="swal('Would you like to delete task?', {buttons: ['Cancel', true],});" class="fas fa-minus-circle"></i>
                             </li>
                             <li>
                                 <input class="form-check-input" type="checkbox" value="" >
-                                <label class="form-check-label ml-3" for="flexCheckDefault"><p>Task to Complete</p></label>
+                                <label class="form-check-label ml-3" for="flexCheckDefault"><p>T</p></label>
                                 <i onclick="swal('Would you like to delete task?', {buttons: ['Cancel', true],});" class="fas fa-minus-circle"></i>
                             </li>
                         </ul>
