--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="ml-5">
-                        <form onsubmit="app.listsController.newList(event)">
+                        <form onsubmit="app.listsController.newList(event)" id="create-list-form">
                             <div class="mb-3 d-inline">
-                                <label for="" class="form-label sr-only">New List</label>
-                                <input type="text" class="" placeholder="New List" min="3" max="15">
-                                <label for="" class="sr-only">Color</label>
-                                <input type="color" name="color" id="">
+                                <label for="list" class="form-label sr-only">New List</label>
+                                <input type="text" name="list" placeholder="New List" required minlength="3" maxlength="15">
+                                <label for="color" class="sr-only">Color</label>
+                                <input type="color" name="color">
                                 <button type="submit" class="btn btn-dark"><i class="fas fa-plus"></i></button>
                             </div>
                         </form>
@@ -45,49 +45,7 @@
                 </div>
             </div>
             <div id="list-container" class="row  task-container m-auto py-lg-5">
-                <!-- <div class="col-lg-4">
-                    <div class="bg-primary p-0 my-3 task-card">
-                        <h2 class="text-center mb-lg-4 task-header"><b>Task 1</b></h2>
-                        <ul class="task-list m-3">
-                            <li>
-                                <div class="row">
-                                    <div class="col-10">
-                                        <input onclick="swal('You completed a task!', 'Good Job!', 'success');" class="form-check-input" type="checkbox" value="" >
-                                        <label class="form-check-label ml-3" for="flexCheckDefault"><p>Task</p></label>
-                                    </div>
-                                    <div class="col-2">
-                                        <i onclick="swal('Would you like to delete task?', {buttons: ['Cancel', true],});" class="fas fa-minus-circle"></i>
-                                    </div>
-                                </div>
-                            </li>
-                            <li>
-                                <input class="form-check-input" type="checkbox" value="" >
-                                <label class="form-check-label ml-3" for="flexCheckDefault"><p>Task to Complete</p></label>
-                                <i onclick="swal('Would you like to delete task?', {buttons: ['Cancel', true],});" class="fas fa-minus-circle"></i>
-                            </li>
-                            <li>
-                                <input class="form-check-input" type="checkbox" value="" >
-                                <label class="form-check-label ml-3" for="flexCheckDefault"><p>Complete</p></label>
-                                <i onclick="swal('Would you like to delete task?', {buttons: ['Cancel', true],});" class="fas fa-minus-circle"></i>
-                            </li>
-                            <li>
-                                <input class="form-check-input" type="checkbox" value="" >
-                                <label class="form-check-label ml-3" for="flexCheckDefault"><p>T</p></label>
-                                <i onclick="swal('Would you like to delete task?', {buttons: ['Cancel', true],});" class="fas fa-minus-circle"></i>
-                            </li>
-                        </ul>
-                        <div class="p-3">
-                            <form>
-                                <div class="mb-3 ml-4 d-inline">
-                                    <label for="" class="form-label sr-only">Task Name</label>
-                                    <input type="text" class="add-task" placeholder="New Task" >
-                                    <button type="submit" class="btn ml-5"><i class="fas fa-plus"></i></button>
-                                    <hr>
-                                </div>
-                            </form>
-                        </div>
-                    </div>
-                </div> -->
+                
             </div>
         </div>
     </main>
